[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-search-results>=2.4.2",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "requests>=2.32.3",
    "streamlit-authenticator>=0.4.2",
    "streamlit>=1.45.1",
    "supabase>=2.15.2",
    "trafilatura>=2.0.0",
    "stripe>=12.1.0",
    "cryptography>=45.0.3",
    "psycopg2-binary>=2.9.10",
    "anthropic>=0.53.0",
    "flask>=3.1.1",
]
