[project]
name = "fetchster"
version = "0.1.0"
description = "Streamlit email discovery and lead generation app using Serper.dev."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-search-results>=2.4.2",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "requests>=2.32.3",
    "streamlit-authenticator>=0.4.2",
    "streamlit>=1.45.1",
    "supabase>=2.15.2",
    "trafilatura>=2.0.0",
    "stripe>=12.1.0",
    "cryptography>=45.0.3",
    "psycopg2-binary>=2.9.10",
    "anthropic>=0.53.0",
    "flask>=3.1.1",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "api_engine",
    "app",
    "auth",
    "clean_searcher",
    "complete_location_data",
    "connection_manager",
    "dashboard_styles",
    "footer",
    "fresh_search",
    "keywords_module",
    "location_data",
    "location_module",
    "location_ui_components",
    "location_utils",
    "login_page",
    "login_styles",
    "new_search_engine",
    "payments",
    "pricing_page",
    "progress_module",
    "search_engine",
    "search_history",
    "search_interface",
    "search_limits",
    "search_options_module",
    "search_styles",
    "streamlined_search",
    "webhook_handler",
]
